# radas

./: .gitignore  LICENSE  README.md  poetry.toml  pyproject.toml  run_radas.py  test_against_mavrin.ipynb
.github/workflows/: workflow_actions.yml
adas_data/: data_to_fetch.yaml  fetch_adas_data.py  fortran_file_handling.f90
adas_data/headers/: xxdata_11.pyf
cases/argon/: input.yaml
cases/beryllium/: input.yaml
cases/carbon/: input.yaml
cases/helium/: input.yaml
cases/hydrogen/: input.yaml
cases/krypton/: input.yaml
cases/lithium/: input.yaml
cases/neon/: input.yaml
cases/nitrogen/: input.yaml
cases/oxygen/: input.yaml
cases/tungsten/: input.yaml
cases/xenon/: input.yaml
radas/: __init__.py  adas_interface.py  adf11_dataset.py  atomic_species.py  build_raw_dataset.py  cli.py  config.yaml  coronal_equilibrium.py  directories.py  get_git_hash.py  interpolate_rates.py  plotting.py  radiated_power.py  radiation.py  read_dat_files.py  read_rate_coefficients.py  read_rate_coeffs.py  shared.py  time_evolution.py  unit_handling.py  write_output.py
radas/adas_file_readers/: __init__.py  read_dat_files.py
radas/adas_interface/: __init__.py  compile_with_f2py.py  determine_adas_dataset_type.py  download_adas_datasets.py  download_species_data.py  fortran_reader.py  prepare_adas_fortran_interface.py  prepare_adas_readers.py  read_adf11_file.py
radas/computation/: build_rate_coefficients.py  calculate_coronal_states.py  calculate_derivatives.py  calculate_radiation.py  derivatives.py  interpolate_rate_coefficient.py  kahan_summation.py  read_cases.py
radas/mavrin_reference/: README.md  __init__.py  compare_against_mavrin.py  compare_to_mavrin.py  mavrin_data.yaml  read_mavrin_data.py
radas/named_options/: __init__.py  adf11_dataset.py  atomic_species.py
radas/readers/: __init__.py  read_adf11_file.py
radas/readers/adf11/: xxdata_11.pyf
tests/: conftest.py  test_against_Mavrin.py  test_against_mavrin.py  test_main.py  test_scripts.py  test_temp_dirs.py  test_unit_handling.py
tests/mavrin_reference/: mavrin_data.yml
tests_old/: test_against_Mavrin.py
tests_old/mavrin_reference/: compare_against_mavrin.py
