[tool.poetry]
name = "radas"
# Switch from year.month.version to epoch!major.minor.patch
version = "1!1.0.0"
description = "Plasma radiated power calculated using OpenADAS"
authors = ["Commonwealth Fusion Systems"]
readme = "README.md"
classifiers = [
"Development Status :: 5 - Production/Stable",
"Intended Audience :: Science/Research",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.12",
"Programming Language :: Python :: 3.13",
"Programming Language :: Python :: 3 :: Only",
"Topic :: Scientific/Engineering :: Physics",
"License :: OSI Approved :: MIT License",
]

[tool.poetry.scripts]
radas = 'radas.cli:run_radas_cli'
run_radas = 'radas.cli:run_radas_cli'
radas_config = 'radas.cli:write_config_template'

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "^2.4.4"
scipy = "^1.17.1"
matplotlib = "^3.10.8"
pint = "^0.25.3"
pyyaml = ">=6.0"
xarray = "^2026.2.0"
pint-xarray = "^0.6.1"
click = "^8.3.2"
meson = "^1.10.2"
ninja = "^1.13.0"
fortranformat = ">=2.0.0"
pandas = "^3.0.2"

[tool.poetry.group.dev.dependencies]
# Install pytest into all development environments
# (don't set optional = true)
pytest = "^9.0.3"
pytest-order = ">=1.1"
pytest-cov = "^7.1.0"
coverage = "^7.13.5"
ipdb = ">=0.13.13"
ipython = "^9.12.0"

[tool.poetry.group.ipykernel]
optional = true

[tool.poetry.group.ipykernel.dependencies]
ipdb = ">=0.13"
ipykernel = ">=6.20"

[tool.poetry.group.publish]
optional = true

[tool.poetry.group.publish.dependencies]
twine = ">=4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "--cov=radas --cov-branch --cov-report term --cov-report xml:coverage.xml --import-mode=importlib"
pythonpath = [
  ".",
  "radas",
]
testpaths = [
  "tests",
]
