[tool.poetry]
name = "radas"
# As of version 1!1.0.0, this project has switched to a PEP 440 epoch-based
# versioning scheme. The 1! prefix is mandatory. Because our previous versioning
# used a date-based format (e.g., 2025.6.2), package managers will treat
# Semantic Versioning (i.e. 1.0.0) as an "older" release. The epoch ensures that
# the new versioning takes precedence over all legacy YYYY.MM.version releases.
version = "1!1.0.0"
description = "Plasma radiated power calculated using OpenADAS"
authors = ["Commonwealth Fusion Systems"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.scripts]
radas = 'radas.cli:run_radas_cli'
run_radas = 'radas.cli:run_radas_cli'
radas_config = 'radas.cli:write_config_template'

[tool.poetry.dependencies]
python = ">=3.12"
numpy = "^2.4.4"
scipy = "^1.17.1"
matplotlib = "^3.10.8"
pint = "^0.25.3"
pyyaml = "^6.0.3"
# Since xarray uses year.month.version, allow the "major" version to increase.
xarray = ">=2026.2.0"
pint-xarray = "^0.6.1"
pandas = "^3.0.2"
click = "^8.3.2"
meson = "^1.10.2"
ninja = "^1.13.0"
fortranformat = "^2.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-order = "^1.3.0"
pytest-cov = "^7.1.0"
coverage = "^7.13.5"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
addopts = "--cov=radas --cov-branch --cov-report term --cov-report xml:coverage.xml --import-mode=importlib"
pythonpath = ["."]
testpaths = ["tests"]